Fix dialog height on mobile view

--- a/frontend/src/app/shared/dialog/checkin/check-in-form/check-in-form.component.scss
+++ b/frontend/src/app/shared/dialog/checkin/check-in-form/check-in-form.component.scss
@@ -16,7 +16,3 @@
 app-check-in-form-ordinal {
   padding-top: 0.1rem;
 }
-
-.dialog-content {
-  max-height: 45vh;
-}
