--- a/frontend/src/app/shared/dialog/keyresult-dialog/keyresult-dialog.component.scss
+++ b/frontend/src/app/shared/dialog/keyresult-dialog/keyresult-dialog.component.scss
@@ -4,7 +4,3 @@
     margin-left: 0;
   }
 }
-
-.keyresult-form {
-  max-height: 60vh;
-}
